--- a/undervisningsopgaver/01_js_basics/01_areal.html
+++ b/undervisningsopgaver/01_js_basics/01_areal.html
@@ -9,7 +9,12 @@
 </head>
 
 <body>
-    <script src=""></script>
-</body>
+    <script>
+        let længde = 31;
+        let bredde = 25;
+        let areal = længde * bredde;
 
-</html>
+        let resultat = `Længden er ${længde} meter og bredden er ${bredde} meter. Arealet er ${areal}.`;
+        console.log(resultat);
+    </script>
+</body></html>
