--- a/undervisningsopgaver/01_js_basics/01_areal.html
+++ b/undervisningsopgaver/01_js_basics/01_areal.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>Øvelse 01 - areal</title>
     <link rel="stylesheet" href="">
 </head>
 
@@ -16,5 +16,8 @@
 
         let resultat = `Længden er ${længde} meter og bredden er ${bredde} meter. Arealet er ${areal}.`;
         console.log(resultat);
+
     </script>
-</body></html>
+</body>
+
+</html>
