--- a/undervisningsopgaver/01_js_basics/06_arealFejl.html
+++ b/undervisningsopgaver/01_js_basics/06_arealFejl.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Øvelse 05 - areal</title>
+    <title>Øvelse 04 - areal</title>
     <link rel="stylesheet" href="">
 </head>
 
@@ -22,16 +22,10 @@
         function buttonClicked() {
             let længde = document.querySelector("#længde").value;
             let bredde = document.querySelector("#bredde").value;
-            //let areal = længde * bredde;
+            let areal = længde * bredde;
 
-            let resultat = `Længden er ${længde} meter og bredden er ${bredde} meter. Arealet er ${areal(længde, bredde)}.`;
-
+            let resultat = `Længden er ${længde} meter og bredden er ${bredde} meter. Arealet er ${areal}.`;
             console.log(resultat);
-        }
-
-        function areal(l, b) {
-            return l * b;
-
         }
 
     </script>
