--- a/undervisningsopgaver/02_js_DOM/html-struktur.html
+++ b/undervisningsopgaver/02_js_DOM/html-struktur.html
@@ -6,10 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>html struktur</title>
     <link rel="stylesheet" href="">
+    <style>
+
+    </style>
 </head>
 
 <body>
-    <script></script>
-</body>
+    <header>
+        <h1 style="text-align: center;">Titel</h1>
+    </header>
 
-</html>
+    <main>
+        <section id="section_wrapper">
+            <h2>Undertitel</h2>
+            <article>
+                <img src="https://placeimg.com/300/400/animals" alt="random dyr">
+                <h3>Artikel</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore, expedita quae harum explicabo, dolorem aperiam dicta deleniti ipsum sequi repellat perferendis, veritatis ad quibusdam! Voluptatum soluta similique itaque explicabo cupiditate?</p>
+            </article>
+            <article><img src="https://placeimg.com/300/400/animals" alt="random dyr">
+                <h3>Artikel</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore, expedita quae harum explicabo, dolorem aperiam dicta deleniti ipsum sequi repellat perferendis, veritatis ad quibusdam! Voluptatum soluta similique itaque explicabo cupiditate?</p>
+            </article>
+        </section>
+    </main>
+    <footer style="text-align: center;">This is a footer</footer>
+    <script></script>
+</body></html>
