--- a/undervisningsopgaver/02_js_DOM/html-struktur.html
+++ b/undervisningsopgaver/02_js_DOM/html-struktur.html
@@ -18,21 +18,30 @@
             grid-gap: 20px;
         }
 
-        p {
-            max-width: 300px;
-        }
 
         article {
             border: solid 1px;
-            max-width: 300px;
             margin: 2rem;
+        }
+
+        img {
+            width: 100%;
+        }
+
+        h1,
+        footer {
+            text-align: center;
+        }
+
+        h2 {
+            padding-left: 2rem;
         }
     </style>
 </head>
 
 <body>
     <header>
-        <h1 style="text-align: center;">Titel</h1>
+        <h1>Titel</h1>
     </header>
 
     <main>
@@ -50,6 +59,6 @@
             </article>
         </section>
     </main>
-    <footer style="text-align: center;">This is a footer</footer>
+    <footer>This is a footer</footer>
     <script></script>
 </body></html>
