rettelse html struktur øvelse

--- a/undervisningsopgaver/02_js_DOM/html-struktur.html
+++ b/undervisningsopgaver/02_js_DOM/html-struktur.html
@@ -21,7 +21,8 @@
 
         article {
             border: solid 1px;
-            margin: 2rem;
+            margin-left: 2rem;
+            margin-right: 2rem;
         }
 
         img {
@@ -31,6 +32,12 @@
         h1,
         footer {
             text-align: center;
+        }
+
+        header,
+        footer {
+            padding: 10px 0;
+            border: solid 1px #888;
         }
 
         h2 {
