øvelse 1 js_objekter

--- a/undervisningsopgaver/02_js_DOM/html-struktur.html
+++ b/undervisningsopgaver/02_js_DOM/html-struktur.html
@@ -67,5 +67,7 @@
         </section>
     </main>
     <footer>This is a footer</footer>
-    <script></script>
+    <script>
+
+    </script>
 </body></html>
