øvelse 02_visDyr, undtagen load tjek.

--- a/undervisningsopgaver/03_js_objekter/02_visDyr.html
+++ b/undervisningsopgaver/03_js_objekter/02_visDyr.html
@@ -9,6 +9,12 @@
 </head>
 
 <body>
+
+    <article id="article">
+        <p></p>
+        <img src="" alt="">
+    </article>
+
     <script>
         let dyr = {
             "navn": "Gris",
@@ -18,5 +24,9 @@
         }
 
         console.log(`dyr: ${dyr.navn} type: ${dyr.type} levested: ${dyr.levested}`)
+
+        const destination = document.querySelector("#article");
+        destination.querySelector("p").textContent = `dyr: ${dyr.navn}, type: ${dyr.type}, levested: ${dyr.levested}`;
+        destination.querySelector("img").src = dyr.billede;
     </script>
 </body></html>
