dom loadet, 04_dyrArray

--- a/undervisningsopgaver/03_js_objekter/04_dyrArray.html
+++ b/undervisningsopgaver/03_js_objekter/04_dyrArray.html
@@ -50,6 +50,13 @@
 
         console.log(dyr);
 
+        // Tjekke om domen er loaded inden vi tilføjer elementer
+        document.addEventListener("DOMContentLoaded", start);
+
+        function start() {
+            console.log("Dom er loadet");
+        }
+
     </script>
 </body>
 
