--- a/undervisningsopgaver/04_json/persongalleri.html
+++ b/undervisningsopgaver/04_json/persongalleri.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>Persongalleri</title>
     <link rel="stylesheet" href="">
     <style>
         * {
@@ -78,9 +78,6 @@
 
         const main = document.querySelector("main");
         const template = document.querySelector("template").content;
-
-
-
 
         function vis(json) {
             console.log("vis");
