--- a/undervisningsopgaver/05_filtreringSortering/01_troende.html
+++ b/undervisningsopgaver/05_filtreringSortering/01_troende.html
@@ -52,11 +52,11 @@
         }
         document.addEventListener("DOMContentLoaded", start)
         let personer;
+        let filter = "ja";
 
 
         // første funktion der kaldes efter DOM er loaded
         function start() {
-
             loadJSON();
         }
 
@@ -78,11 +78,12 @@
             personer.forEach(person => {
 
                 // loop igennem json (personer)
-                const klon = skabelon.cloneNode(true);
-                klon.querySelector(".navn").textContent = person.fornavn + " " + person.efternavn;
-                klon.querySelector(".profil-billede").src = medieurl + person.billede;
-                dest.appendChild(klon);
-
+                if (filter == person.troende) {
+                    const klon = skabelon.cloneNode(true);
+                    klon.querySelector(".navn").textContent = person.fornavn + " " + person.efternavn;
+                    klon.querySelector(".profil-billede").src = medieurl + person.billede;
+                    dest.appendChild(klon);
+                }
             })
         }
     </script>
