rettet fejl ift. alle som start værdi

--- a/undervisningsopgaver/05_filtreringSortering/05_fremhæv.html
+++ b/undervisningsopgaver/05_filtreringSortering/05_fremhæv.html
@@ -75,7 +75,7 @@
         }
         document.addEventListener("DOMContentLoaded", start)
         let personer;
-        let filter = "ja";
+        let filter = "alle";
 
 
         // første funktion der kaldes efter DOM er loaded
