--- a/undervisningsopgaver/07_babushka/index.html
+++ b/undervisningsopgaver/07_babushka/index.html
@@ -6,12 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
     <style>
+        * {
+            margin: 0;
+            padding: 0;
+        }
+
         body {
             font-family: sans-serif;
         }
 
-        img {
+        #menu-oversigt img {
             width: 100%;
+            opacity: 80%;
+        }
+
+        #menu-oversigt img:hover {
+            opacity: 100%;
+            cursor: pointer;
         }
 
         #liste {
@@ -19,26 +30,140 @@
             grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
             grid-gap: 1em;
             margin: 2em;
+            padding-left: 2rem;
+            padding-right: 2rem;
         }
 
-        .person {
-            padding: 1em;
-            border: 1px solid;
-            border-radius: 1em;
+        .alleRetter {
+            margin-left: 4rem;
+            margin-top: 4rem;
         }
+
+        .translate {
+            margin-left: 4rem;
+            margin-bottom: 4rem;
+        }
+
 
         nav {
             display: flex;
             justify-content: center;
+            margin-top: 2rem;
         }
 
         nav button {
             text-align: center;
             margin: 0.5rem;
+            padding: 0.5rem;
         }
 
         .valgt {
-            background-color: cadetblue;
+            background-color: #024363;
+        }
+
+        .hero-image {
+            background-image: url(images/artiom-vallat-oVKbZx72I1U-unsplash.jpg);
+
+            /* Set a specific height */
+            height: 30vw;
+
+            /* Position and center the image to scale nicely on all screens */
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
+            position: relative;
+        }
+
+        .hero-text {
+            text-align: center;
+            position: absolute;
+            top: 80%;
+            left: 20%;
+            transform: translate(-50%, -50%);
+            color: white;
+            font-size: 2rem;
+        }
+
+        #om {
+            display: grid;
+            grid-template-columns: repeat(6, 1fr);
+        }
+
+        .billede1 {
+            grid-column-start: 2;
+
+        }
+
+        .billede1 img {
+            width: 130%;
+            padding-top: 7rem;
+            margin-left: -3rem;
+
+        }
+
+        .text1 {
+            grid-column-start: 4;
+            grid-column-end: 7;
+            background-color: #4A4208;
+            height: 40vw;
+            color: white;
+        }
+
+        .text1 h2 {
+            margin-left: 5rem;
+            margin-top: 7rem;
+            font-size: 2.5rem;
+        }
+
+        .lorem1 {
+            margin-left: 3rem;
+            padding: 2rem;
+            font-size: 1.5rem;
+        }
+
+        .ned {
+            font-size: 1.5rem;
+            margin-left: 5rem;
+        }
+
+        .scroll {
+            text-decoration: none;
+            color: white;
+        }
+
+        #takeAway {
+            display: grid;
+            grid-template-columns: repeat(6, 1fr);
+        }
+
+        .text2 {
+            margin-top: 11rem;
+            grid-column-start: 2;
+        }
+
+        .text2 h2 {
+            margin-bottom: 1rem;
+        }
+
+        .text2 .lorem2 {
+            margin-bottom: 2rem;
+        }
+
+        .billede2 {
+            grid-column-start: 4;
+            grid-column-end: 7;
+        }
+
+        .billede2 img {
+            width: 50%;
+            margin-top: 7rem;
+            margin-left: 11rem;
+        }
+
+
+        footer {
+            background-color: black;
+            color: white;
         }
     </style>
 
@@ -46,30 +171,59 @@
 
 <body>
     <header>
-        <h1>Alle</h1>
-        <nav>
-            <button data-kategori="alle" class="valgt">Menu</button>
-            <button data-kategori="forretter">Forretter</button>
-            <button data-kategori="hovedretter" valgt>Hovedretter</button>
-            <button data-kategori="sideorders">Sideorders</button>
-            <button data-kategori="desserter">Desserter</button>
-            <button data-kategori="drikkevarer">Drikkevarer</button>
-        </nav>
+        <div class="hero-image">
+            <div class="hero-text">
+                <h1>Bistro Babushka</h1>
+            </div>
+        </div>
+
     </header>
 
-    <section id="liste"></section>
+    <section id="om">
+        <div class="billede1"><img src="images/igor-starkov-3xKwPmBkT7s-unsplash.jpg" alt="russian restaurant"></div>
+        <div class="text1">
+            <h2>What is this Bistro Babushka?</h2>
+            <p class="lorem1">We try to be both cozy and tough. It is hard. Not much people know excellent RUSSIAN food, but it is so good, you wish you were russian. But you can forget about it. We will not let you in Russia. But it's okay my friend, you can still come eat at Bistro Babushka. Best russian food in the whole world. Except my mama's. Hers is always the best.</p>
+            <p class="ned">See menu downstairs.<a class="scroll" href="#menu-oversigt">SCROLL!</a></p>
+        </div>
+    </section>
 
-    <template>
-        <article class="ret">
-            <h2 class="navn"></h2>
-            <p class="pris"></p>
-            <img src="" alt="" class="ret-billede">
-        </article>
-    </template>
+    <section id="takeAway">
+
+        <div class="text2">
+            <h2>Right now Bistro is closed</h2>
+            <p class="lorem2">Some woman decide we cannot open. We just want to serve you best russian food, but no. We cannot open. But we found way to make you best russian food still. We make, you come and you get big doggybag to go. Then you eat home. Then you come back again, tomorrow.</p>
+            <p class="ned2">You call to get food. Same menu.</p>
+        </div>
+        <div class="billede2"><img src="images/michael-dziedzic-n82gepDXAD8-unsplash.jpg" alt="russian plates"></div>
+    </section>
+
+    <section id="menu-oversigt">
+        <nav>
+            <button data-kategori="alle" class="valgt">Full Menu</button>
+            <button data-kategori="forretter">Appetizer</button>
+            <button data-kategori="hovedretter" valgt>Main course</button>
+            <button data-kategori="sideorders">Sideorders</button>
+            <button data-kategori="desserter">Mama's cakes</button>
+            <button data-kategori="drikkevarer">Vodka and stuff</button>
+        </nav>
 
 
+        <h1 class="alleRetter">Alle retter</h1>
+        <p class="translate">We put Danish translate so you understand.</p>
+        <section id="liste"></section>
+
+        <template>
+            <article class="ret">
+                <h2 class="navn"></h2>
+                <p class="pris"></p>
+                <img src="" alt="" class="ret-billede">
+            </article>
+        </template>
+
+    </section>
     <script>
-        const header = document.querySelector("header h1");
+        const header = document.querySelector("#menu-oversigt h1");
         const medieurl = "https://babushka-dd8a.restdb.io/media/";
         const myHeaders = {
 
@@ -127,4 +281,8 @@
             location.href = `retVisning.html?id=${hvilken._id}`;
         }
     </script>
-</body></html>
+</body>
+<footer>
+    <h2>Kontakt</h2>
+    <p>Telefon: 12 34 56 78</p>
+</footer></html>
