--- a/undervisningsopgaver/07_babushka/retVisning.html
+++ b/undervisningsopgaver/07_babushka/retVisning.html
@@ -4,8 +4,36 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>You choose..</title>
+    <style>
+        * {
+            padding: 0;
+            margin: 0;
+        }
 
+        body {
+            background-color: #4A4208;
+        }
+
+        .ret {
+            width: 50%;
+            margin: 0 auto;
+
+        }
+
+        .ret h2 {
+            padding: 2rem;
+            margin-top: 3rem;
+        }
+
+        .ret button {
+            margin-left: 22rem;
+            margin-top: 1rem;
+            padding: 0.5rem;
+            padding-left: 2rem;
+            padding-right: 2rem;
+        }
+    </style>
 </head>
 
 <body>
