--- a/undervisningsopgaver/07_babushka/index.html
+++ b/undervisningsopgaver/07_babushka/index.html
@@ -149,6 +149,12 @@
             font-style: normal;
         }
 
+        .ned2 {
+            font-family: dico-typewriter, mono;
+            font-weight: 400;
+            font-style: normal;
+        }
+
         .billede2 {
             grid-column-start: 4;
             grid-column-end: 7;
