footer flyttet. Alt valideret. Enkelt fejl på som src - men billede overføres

--- a/undervisningsopgaver/07_babushka/index.html
+++ b/undervisningsopgaver/07_babushka/index.html
@@ -334,7 +334,7 @@
         <nav>
             <button data-kategori="alle" class="valgt">Full Menu</button>
             <button data-kategori="forretter">Appetizer</button>
-            <button data-kategori="hovedretter" valgt>Main course</button>
+            <button data-kategori="hovedretter">Main course</button>
             <button data-kategori="sideorders">Sideorders</button>
             <button data-kategori="desserter">Mama's cakes</button>
             <button data-kategori="drikkevarer">Vodka and stuff</button>
@@ -417,11 +417,12 @@
         }
 
     </script>
+
+    <footer>
+        <h2>You pick up food here:</h2>
+        <p>Putinsgade 342, 2400 København Nv</p>
+        <p>You call this: 12 34 56 78</p>
+    </footer>
 </body>
-<footer>
-    <h2>You pick up food here:</h2>
-    <p>Putinsgade 342, 2400 København Nv</p>
-    <p>You call this: 12 34 56 78</p>
-</footer>
 
 </html>
